# Ace

./: .gitignore  CMakeLists.txt  MNN.podspec  README.md  benchmark.sh  build.sh  convert.sh  parser.sh
ace/device/cuda/: CMakeLists.txt  cuda_impl.cpp  utils.h.bak
ace/device/cuda/kernels/: activation.cu  binary.cu  elementwise.cu  elementwise.cuh  reduce.cu  resize.cu  scale.cu  softmax.cu
framework/core/: CMakeLists.txt  device.h  utils.cc  utils.h
tars/device/cpu/: BinaryUtils.hpp  CMakeLists.txt  CPUArgMax.cpp  CPUArgMax.hpp  CPUBinary.cpp  CPUBinary.hpp  CPUCast.cpp  CPUCast.hpp  CPUConvolution.cpp  CPUConvolution.hpp  CPUConvolutionDepthwise.cpp  CPUConvolutionDepthwise.hpp  CPUCropAndResize.cpp  CPUCropAndResize.hpp  CPUDeconvolution.cpp  CPUDeconvolution.hpp  CPUDeconvolutionDepthwise.cpp  CPUDeconvolutionDepthwise.hpp  CPUDepthwiseConvInt8.cpp  CPUDepthwiseConvInt8.hpp  CPUDequantize.cpp  CPUDequantize.hpp  CPUDet.cpp  CPUDet.hpp  CPUDetectionOutput.cpp  CPUDetectionOutput.hpp  CPUDetectionPostProcess.cpp  CPUDetectionPostProcess.hpp  CPUDevice.cc  CPUDevice.h  CPUEltwise.cpp  CPUEltwise.hpp  CPUEltwiseInt8.cpp  CPUEltwiseInt8.hpp  CPUFixedPoint.hpp  CPUFloatToInt8.cpp  CPUFloatToInt8.hpp  CPUGridSample.cpp  CPUGridSample.hpp  CPUHistogram.cpp  (+98 more)
tars/device/cpu/bf16/: BF16Backend.cpp  BF16Backend.hpp  BF16Binary.cpp  BF16Binary.hpp  BF16Functions.cpp  BF16Functions.hpp  BF16Unary.cpp  BF16Unary.hpp  VecHalf.hpp  WinogradOptFunctionHalf.cpp  WinogradOptFunctionHalf.hpp  register.py
tars/device/cpu/compute/: CommonOptFunction.cpp  CommonOptFunction.h  ConvInt8TiledExecutor.cpp  ConvInt8TiledExecutor.hpp  ConvInt8Winograd.cpp  ConvInt8Winograd.hpp  ConvOpt.cpp  Convolution1x1Strassen.cpp  Convolution1x1Strassen.hpp  ConvolutionDepthwise3x3.cpp  ConvolutionDepthwise3x3.hpp  ConvolutionFloatFactory.cpp  ConvolutionFloatFactory.h  ConvolutionGroup.cpp  ConvolutionGroup.hpp  ConvolutionInt8Executor.cpp  ConvolutionInt8Executor.hpp  ConvolutionIntFactory.cpp  ConvolutionIntFactory.hpp  ConvolutionPackFreeWinograd.cpp  ConvolutionPackFreeWinograd.hpp  ConvolutionPackWinograd.cpp  ConvolutionPackWinograd.hpp  ConvolutionTiledExecutor.cpp  ConvolutionTiledExecutor.hpp  ConvolutionWinogradBridge.cpp  ConvolutionWinogradBridge.hpp  ConvolutionWinogradImpl.cpp  ConvolutionWinogradImpl.hpp  DeconvolutionWithStride.cpp  DeconvolutionWithStride.hpp  DenseConvolutionTiledExecutor.cpp  DenseConvolutionTiledExecutor.hpp  ImageProcessFunction.cpp  ImageProcessFunction.hpp  Int8FunctionsOpt.cpp  Int8FunctionsOpt.h  OptimizedComputer.cpp  OptimizedComputer.hpp  ResizeFunction.cpp  (+8 more)
tars/device/cpu/x86_x64/: AVX2Backend.cpp  AVX2Backend.hpp  AVX2Functions.cpp  AVX2Functions.hpp  FunctionDispatcher.cpp
tools/converter/: CMakeLists.txt  converter.cc
tools/converter/include/: ConverterScope.hpp  OpCount.hpp  PostConverter.hpp  addBizCode.hpp  caffeConverter.hpp  cli.hpp  config.hpp  cxxopts.hpp  liteConverter.hpp  onnxConverter.hpp  options.hpp  tensorflowConverter.hpp  torchConverter.hpp  writeFb.hpp
tools/converter/source/: MNNConverter.cpp  MNNDump2Json.cpp  MNNRevert2Buffer.cpp  TestConvertResult.cpp  TestPassManager.cpp
tools/converter/source/MNN/: addBizCode.cpp
tools/converter/source/caffe/: ArgMax.cpp  BNLL.cpp  BatchNormalScale.cpp  Clip.cpp  Concat.cpp  Convolution.cpp  Convolution3D.cpp  Crop.cpp  Detection.cpp  Eltwise.cpp  Elu.cpp  Im2Seq.cpp  InnerProduct.cpp  Input.cpp  LRN.cpp  LSTM.cpp  Normalize.cpp  OpConverter.cpp  OpConverter.hpp  Permute.cpp  Pool.cpp  PriorBox.cpp  Python.cpp  ROIPooling.cpp  Relu.cpp  Reshape.cpp  ResizeInterp.cpp  ShuffleChannel.cpp  Sigmoid.cpp  Slice.cpp  Softmax.cpp  SpatialProduct.cpp  Tanh.cpp  Threshold.cpp  UnaryOp.cpp  caffeConverter.cpp
tools/converter/source/common/: AddSparseInfo.cpp  AddUUID.cpp  AlignDenormalizedValue.cpp  Common.cpp  Common.hpp  CommonUtils.hpp  ConverterScope.cpp  FullQuantAndCoding.cpp  OpCount.cpp  RemoveParams.cpp  SaveHalfFloat.cpp  WeightQuantAndCoding.cpp  cli.cpp  convertToStaticModel.cpp  writeFb.cpp
tools/converter/source/compression/: PipelineBuilder.cpp  PipelineBuilder.hpp  quantization.hpp
tools/converter/source/onnx/: ArgMaxOnnx.cpp  BinaryOpOnnx.cpp  CastOnnx.cpp  ConcatOnnx.cpp  ConstantOnnx.cpp  CosineSimilarityOnnx.cpp  CumSumOnnx.cpp  DepthToSpaceOnnx.cpp  DetOnnx.cpp  EluOnnx.cpp  ExpandOnnx.cpp  EyeLikeOnnx.cpp  FlattenOnnx.cpp  GridSampleOnnx.cpp  GridSampleOnnxClassic.cpp  IdentityOnnx.cpp  IfOnnx.cpp  LRNOnnx.cpp  LoopOnnx.cpp  MatMulOnnx.cpp  ROIAlignOnnx.cpp  ROIPoolingOnnx.cpp  RangeOnnx.cpp  ReduceOnnx.cpp  ReluOnnx.cpp  ReshapeOnnx.cpp  SequenceOnnx.cpp  ShapeOnnx.cpp  SigmoidOnnx.cpp  SoftmaxOnnx.cpp  SpaceToDepthOnnx.cpp  SplitOnnx.cpp  SqueezeOnnx.cpp  TanhOnnx.cpp  TileOnnx.cpp  TransposeOnnx.cpp  UnSqueezeOnnx.cpp  UnaryOnnx.cpp  WhereOnnx.cpp  onnxConverter.cpp  (+2 more)
tools/converter/source/optimizer/: GenerateSubGraph.cpp  GenerateSubGraph.hpp  PostConverter.cpp  PostTreatUtils.cpp  PostTreatUtils.hpp  Program.cpp  Program.hpp  SubGraphComplete.hpp  TemplateMerge.cpp  TemplateMerge.hpp
tools/converter/source/tensorflow/: AddNTf.cpp  AsStringTf.cpp  BatchMatMulTf.cpp  BinaryOpTf.cpp  BroadcastToTf.cpp  CastTf.cpp  ConstTf.cpp  CropAndResizeTf.cpp  DepthToSpaceTf.cpp  DequantizeTf.cpp  Detection_PostProcessTf.cpp  EluTf.cpp  ExpandDims.cpp  FillTf.cpp  GatherTf.cpp  GatherV2Tf.cpp  InputTf.cpp  LRNTf.cpp  LSTMBlockCellTf.cpp  LinSpaceTf.cpp  ListDiff.cpp  MatMulTf.cpp  NonMaxSuppressionV2Tf.cpp  OneHotTf.cpp  PackTf.cpp  (+40 more)
tools/converter/src/: converter.cc  dump2json.cc
v2/ace/: CMakeLists.txt
v2/ace/core/: allocator.cc  allocator.h  buffer.cc  buffer.h  macro.h  runtime.h  status.h  tensor.cc  tensor.h  tensor_shape.cc  tensor_shape.h  tensor_utils.cc  tensor_utils.h  thread_pool.cc  thread_pool.h  type_traits_extend.h  types.cc  types.h  utils.cc  utils.h
v2/ace/device/: cpu_runtime.cc  cpu_runtime.h  cuda_runtime.cc  cuda_runtime.h  macros.h  operator.h
v2/ace/ir/: graph_generated.h  op_generated.h  op_option_generated.h  tensor_generated.h  types_generated.h
(+2338 files in other folders)
