protobuf_generate_cpp(ONNX_PROTO_SRCS ONNX_PROTO_HDRS
    ${CMAKE_CURRENT_LIST_DIR}/proto/onnx.proto
    ${CMAKE_CURRENT_LIST_DIR}/proto/onnx-operators.proto
)

file(GLOB ONNX_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cc)
file(GLOB ONNX_OPERATOR_SRC ${CMAKE_CURRENT_LIST_DIR}/operator/*.cc)
list(APPEND ONNX_SRC ${ONNX_OPERATOR_SRC})

add_library(ConverterONNX OBJECT ${ONNX_SRC} ${ONNX_PROTO_SRCS})
add_dependencies(ConverterONNX MNNCompress)
message(STATUS "Onnx: ${ONNX_PROTO_HDRS}")


list(APPEND MNN_CONVERTER_BACKENDS_OBJECTS $<TARGET_OBJECTS:ConverterONNX>)
list(APPEND MNN_CONVERTER_BACKENDS_TARGETS ConverterONNX)
